trunk/Archive2/4e/d0589d1b99d1c9/output
main.cpp: In function ‘int main()’:
main.cpp:11:24: error: no matching function for call to ‘size(int [0])’
     std::cout << size(a);
                        ^
main.cpp:11:24: note: candidate is:
main.cpp:3:47: note: template<class T, long unsigned int N> constexpr size_t size(const T (&)[N])
 template <class T, size_t N> constexpr size_t size(const T(&array)[N]) noexcept
                                               ^
main.cpp:3:47: note:   template argument deduction/substitution failed:
