trunk/Archive2/4e/d0589d1b99d1c9/main.cpp
#include <iostream>

template <class T, size_t N> constexpr size_t size(const T(&array)[N]) noexcept
{
    return N;
}

int main(){
    int a[0];
    
    std::cout << size(a);
    
    return 0;
}
